<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/destination_tracks_list"
        android:title="Descargas"
        android:icon="@android:drawable/ic_lock_idle_lock" />
    <item
        android:id="@+id/destination_search"
        android:title="Buscar"
        android:icon="@android:drawable/ic_secure" />

</menu>
